app/styles/module/_task-editor.scss
// Task editor - Task description page
$iconsColor: #212121;

.task-editor {
	$padding: 66px;
	color: $gray;
	position: relative;


	// back button
	// ............................
	.go-back {
		display: inline-block;
		@include centerBlock(3px, auto, auto, -(emCalc(150px)), auto, absolute);
		@include iconButoon(#9e9e9e, 40px, true);

			&:hover {
				background-color: $nav-gray;
				border-color: $nav-gray;

					svg {
						fill: #fff;
					}
			}
	}


	.title {
		position: relative;
		font-size: emCalc(28px);
		padding-left: $padding;
		font-family: $font-light;

		margin-bottom: emCalc(12px);
		margin-top: 0.8em;

			@include breakpoint(tablet) {
				margin-bottom: emCalc(20px);
				margin-top: emCalc(25px);
			}

			.priority {
				top: 20px;
			}
			
			// legacy code
			// input{
			// 	font-family: $font-light;
			// }
	}


	.editor-content {
		width: 84%;
		margin: auto;

		.has-icon {
			// Can't use em, because font-size might vary
			padding-left: $padding;
			position: relative;

			p {
				line-height: 1;
			}

			.icon-hold {
				display: inline-block;
				position: absolute;
				left: 0;
				top: -10px;
				@include iconButoon($iconsColor, 40px, false);
				border:0;
			}
		}

		> section {
			margin-bottom: 0.8em;
			min-height: 40px;

			@include breakpoint(tablet) {
				margin-bottom: emCalc(36px);
			}
		}
	}


	> nav {
		text-align: center;

		a { margin-left: 4.7em; }
		a:first-child { margin-left: 0; }

		@include breakpoint(tablet) {
			a { margin-left: 8em; }
		}
	}

	textarea, input, .content-editable {
		color: inherit;
		text-indent: 0;
		width: 100%;

		@include transition(color 0.2s ease-out);

		&:focus, &:hover {
			color: $gray;
		}

		&:active, &:focus {
			border:none;
			outline:none;
		}
	}

	textarea, .content-editable {
		@include input-placeholder() {
			color: lighten($gray, 30%);
		}
	}
}

